2006-05-18  Sven Panne  <sven.panne@aedion.de>

	* tests/altest/altest.c: Improved platform #ifdefs a bit.

2006-05-17  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, tests/altest/altest.c: Compilation fixes for Linux.

	* admin/autotools/m4/alut_check_func.m4: Added.

	* examples/openal-info/openal-info.c: Warning police.

2006-05-16  Sven Panne  <sven.panne@aedion.de>

	* admin/VisualStudio6/openal_info/openal_info.dsp,
	admin/VisualStudio6/panning2d/panning2d.dsp: openal-info and panning2d
	build under Visual Studio 6 now, too.

	* examples/openal-info/openal-info.c: alcIsExtensionPresent in
	Creative's latest SDK has a bug: It is not case-insensitive, so let's
	play safe and use upper case only.

	* demos/panning2d/panning2d.c: Only #include config.h if we have it.

2006-05-15  Sven Panne  <sven.panne@aedion.de>

	* tests/altest/altest.c: Fixed NULL vs. 0 confusion. Use more generic
	#defines, so altest works with both EAX 2.0 and EAX 3.0 headers now.

	* admin/VisualStudio6/altest/altest.dsp,
	admin/VisualStudio6/contrib.dsw,
	admin/VisualStudio6/openal_info/openal_info.dsp,
	admin/VisualStudio6/panning2d/panning2d.dsp: Added support for building
	with Visual Studio 6. Currently only altest works, the rest of the
	workspace consists of skeletons only.

	* tests/altest/altest.c: Fixes for compilation with Visual Studio.

2006-05-12  Sven Panne  <sven.panne@aedion.de>

	* Makefile.am: Removed "permission" target, it is not needed anymore.

	* Makefile.am: Update EXTRA_DIST.

	* configure.ac, examples/Makefile.am: Hook openal-info example into
	build system.

	* examples/openal-info/openal-info.c, examples/openal-info/Makefile.am:
	Added.

2006-05-11  Sven Panne  <sven.panne@aedion.de>

	* tests/altest/altest.c(FA_EnumerationValue): Distinguish between ALC
	enums and AL enums.

	* tests/altest/altest.c: Reformatted automatically with GNU indent. In
	the future, please use "make indent" before commiting (if possible).
