@@ -46,6 +46,12 @@ else
   AC_SEARCH_LIBS([alutExit], [alut])
 fi
 
+# ToDo: This is a bit fragile...
+AC_PATH_XTRA
+AC_SEARCH_LIBS([glEnd], [GL opengl32 opengl])
+AC_SEARCH_LIBS([gluNewTess], [GLU glu32 glu])
+AC_SEARCH_LIBS([glutMainLoop], [glut glut32])
+
 ################################################################################
 # Checks for header files.
 ################################################################################
